@@ -3,7 +3,7 @@
 ########################################################################
 # Extension Manager/Repository config file for ext: "sduconnect"
 #
-# Auto generated 02-10-2008 17:44
+# Auto generated 09-10-2008 11:03
 #
 # Manual updates:
 # Only the data in the array - anything else is removed by next write.
@@ -29,7 +29,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'clearCacheOnLoad' => 0,
 	'lockType' => '',
 	'author_company' => 'Netcreators BV',
-	'version' => '0.2.0',
+	'version' => '0.3.0',
 	'constraints' => array(
 		'depends' => array(
 		),
@@ -38,7 +38,7 @@ $EM_CONF[$_EXTKEY] = array(
 		'suggests' => array(
 		),
 	),
-	'_md5_values_when_last_written' => 'a:14:{s:9:"ChangeLog";s:4:"3370";s:12:"ext_icon.gif";s:4:"8881";s:17:"ext_localconf.php";s:4:"50eb";s:14:"ext_tables.php";s:4:"12a2";s:24:"ext_typoscript_setup.txt";s:4:"fceb";s:19:"flexform_ds_pi1.xml";s:4:"d663";s:13:"locallang.xml";s:4:"b76e";s:16:"locallang_db.xml";s:4:"c036";s:14:"doc/manual.sxw";s:4:"1cd3";s:14:"pi1/ce_wiz.gif";s:4:"ae5d";s:31:"pi1/class.tx_sduconnect_pi1.php";s:4:"ceb2";s:39:"pi1/class.tx_sduconnect_pi1_wizicon.php";s:4:"af97";s:13:"pi1/clear.gif";s:4:"cc11";s:17:"pi1/locallang.xml";s:4:"146a";}',
+	'_md5_values_when_last_written' => 'a:14:{s:9:"ChangeLog";s:4:"c201";s:12:"ext_icon.gif";s:4:"8881";s:17:"ext_localconf.php";s:4:"50eb";s:14:"ext_tables.php";s:4:"12a2";s:24:"ext_typoscript_setup.txt";s:4:"fceb";s:19:"flexform_ds_pi1.xml";s:4:"d663";s:13:"locallang.xml";s:4:"b76e";s:16:"locallang_db.xml";s:4:"c036";s:14:"doc/manual.sxw";s:4:"1cd3";s:14:"pi1/ce_wiz.gif";s:4:"ae5d";s:31:"pi1/class.tx_sduconnect_pi1.php";s:4:"1845";s:39:"pi1/class.tx_sduconnect_pi1_wizicon.php";s:4:"af97";s:13:"pi1/clear.gif";s:4:"cc11";s:17:"pi1/locallang.xml";s:4:"146a";}',
 	'suggests' => array(
 	),
 );
